# aiothetadata

./: .gitignore  README.md  acceptance.py  pyproject.toml  test.py
.github/workflows/: test.yml
acceptance/: _utils.py  conftest.py  test_index.py  test_option.py  test_stock.py
aiothetadata/: _trade_conditions.py  client.py  constants.py  datetime.py  request.py  response.py  types.py  version.py
examples/: live_test.py
tests/: test_client.py  test_constants.py  test_datetime.py  test_index_client.py  test_index_snapshot.py  test_option_client.py  test_option_snapshot.py  test_request.py  test_response.py  test_stock_client.py  test_stock_snapshot.py  utils.py
tests/acceptance/: _utils.py  test_index.py  test_option.py  test_stock.py
