[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiothetadata"

dynamic = ["version"]

readme = "README.md"

requires-python = ">= 3.13"

description = "Asyncio-based ThetaData API Client"

classifiers = [
	"Development Status :: 4 - Beta",

	"Intended Audience :: Science/Research",

	"Topic :: Scientific/Engineering",

	"License :: OSI Approved :: MIT License",

	"Programming Language :: Python :: 3.13",
]

dependencies = [
	"aiohttp~=3.11",
	"tzdata",
]


[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-asyncio",
	"pytest-cov",
]

docs = [
	"sphinx",
	"sphinx_rtd_theme",
]

[tool.setuptools.packages.find]
include = ["aiothetadata", "aiothetadata.*"]

[tool.setuptools.dynamic]
version = {attr = "aiothetadata.version.version"}

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
	"tests",
]
